fixed the light mode and dark mode toggle for user

--- a/src/App.css
+++ b/src/App.css
@@ -329,7 +329,7 @@ box-shadow: 0px 1px 5px rgba(0,0,0,0.3);
     border-bottom: none;
 }
 
-.PreprocessText-container .card .card-header h4 {
+.PreprocessText-container .Preprocess-card-header h4 {
     font-size: 2.0rem;
     text-align: left;
     font-weight: bolder;
